Added slides and makefile updated

--- a/rapport/makefile
+++ b/rapport/makefile
@@ -2,14 +2,18 @@ include ../makefile.inc
 
 FIGURES = figures
 
-all: rapport.pdf
+all: rapport.pdf slides.pdf
 
 rapport.pdf: rapport.tex
 	cd $(FIGURES) && make
 	pdflatex $<
 
+slides.pdf: slides.tex
+	cd $(FIGURES) && make
+	pdflatex $<
+
 clean:
-	rm -f *.aux *.log *.gz *.pdf *~
+	rm -f *.aux *.log *.gz *.pdf *~ *.nav *.snm *.toc *.vrb *.out
 
 cleanall: clean
 	cd $(FIGURES) && make clean
